fix(input): add default input height
Fixes an issue where inputs are not aligned when using flex-layout and datetime-local, because there is no default height for input fields in the code, and the default browser's height for datetime-local input fields is not the same as other inputs.

Fixes #8012

--- a/src/material/form-field/form-field-input.scss
+++ b/src/material/form-field/form-field-input.scss
@@ -70,6 +70,9 @@
   &[type='month'],
   &[type='week'],
   &[type='time'] {
+    // Hack to prevent a line break on Safari input date fields:
+    white-space: pre;
+
     &::after {
       content: ' ';
       white-space: pre;
